# signet

./: .clang-format  .clang-tidy  .clangd  .commitlintrc.json  .editorconfig  .gitignore  .swiftformat  .swiftlint.yml  .tool-versions  Brewfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  biome.json  detekt.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdk-versions.json  turbo.json
.github/workflows/: ci-android.yml  ci-apple.yml  ci-flutter-example.yml  ci-flutter-lib.yml  ci-flutter.yml  ci-kmp-example.yml  ci-kmp-lib.yml  ci-kmp.yml  ci-rn-example.yml  ci-rn-lib.yml  ci-rn.yml  ci-windows.yml  commitlint.yml  conformance.yml  fence.yml  license-header.yml  lint.yml  materialize-checksum.yml
android/: README.md  VERIFICATION.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/gradle/: libs.versions.toml
apple/: Package.swift  SignetAppleCore.podspec  SignetCore.podspec  VERIFICATION.md
conformance/: README.md  behaviors.yaml  errors.json  package.json  security-level.json  shapes.json  vectors.json
conformance/harness/: driver.mjs
docs/: README.md  flutter.md  kmp.md  next.config.mjs  package.json  platform-support.md  react-native.md  source.config.ts
examples/: README.md
flutter/: README.md  VERIFICATION.md
kmp/: README.md  VERIFICATION.md
react-native/: README.md
scripts/: check-license-headers.sh  fence-check.sh
windows/: CMakeLists.txt  CMakePresets.json  README.md
windows/include/signet/: signet.hpp
windows/src/: signet.cpp
windows/tests/: CMakeLists.txt  test_signet.cpp
(+218 files in other folders)
